--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,4 @@
 @import "./pages/index-page/team";
 @import "./pages/index-page/clients";
 @import "./layout/footer";
+@import "./pages/portfolio-page/filter-buttons";
