--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,3 +18,4 @@
 @import "./pages/index-page/clients";
 @import "./layout/footer";
 @import "./pages/portfolio-page/filter-buttons";
+@import "./pages/portfolio-page/cards";
